<resources>
    <string name="app_name">Period Checker</string>
    <string name="production_name">An Lan Production!</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose language</string>
    <string name="english">English</string>
    <string name="tieng_viet">Tiếng Việt</string>
    <string name="create_new_user">Create new user</string>
    <string name="full_name">Full name</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="menstrual_info">Menstrual info</string>
    <string name="periodic_cycle">Periodic cycle</string>
    <string name="menstrual_cycle">Menstrual cycle</string>
    <string name="period_length">Period length</string>
    <string name="first_period_day">First period day</string>
    <string name="menstrual_cycle_max">Menstrual cycle max (days)</string>
    <string name="menstrual_cycle_min">Menstrual cycle min (days)</string>

    <!-- period_info-->
    <string name="title_activity_period_info">PeriodInfo</string>
    <string name="back_title">Back</string>
    <string name="period_type_circle">Chu kỳ đều</string>
    <string name="period">Chu kỳ</string>
    <string name="annotation_period_circle">Khoảng thời gian giữa ngày đầu hành kinh chu kỳ này và chu kỳ trước</string>
    <string name="day_number_hanh_kinh">Số ngày hành kinh</string>
    <string name="first_day_of_period">Ngày đầu chu kỳ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_info">MainInfoActivity</string>
    <string name="setting">Setting</string>
    <string name="setting_upcase">SETTING</string>
    <string name="kinhnguyet_upcase">KINH NGUYET</string>
    <string name="pwd">Pass Word</string>
    <string name="lang">Language</string>
    <string name="type_lang">English</string>
    <string name="support">Support</string>
    <string name="Email">aaa@gmail.com</string>
    <string name="trigger_co_kinh">Bat dau co kinh hom nay</string>
    <string name="pwd_dialog_ok">Ok</string>
    <string name="pwd_dialog_cancel">Cancel</string>
    <string name="pwd_show">Show password</string>
    <string name="pwd_info_enter">Password is empty! Plz enter password</string>
    <string name="pwd_dialog_title">Enter password</string>
</resources>
