<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_period_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/src_resources_bg_blur"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.anonymous.periodchecker.period.PeriodInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/activity_period_info_back_imv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/ic_back_transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/activity_period_info_back_imv"
            android:text="@string/back_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/title_activity_period_info" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/period_type_circle" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/activity_period_info_sw"
            android:layout_width="wrap_content"
            android:minWidth="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/activity_period_info_container"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

    <Button
        android:id="@+id/activity_period_info_next_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/next_button"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/next" />


</LinearLayout>
