<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/src_resources_bg_blur"
    android:orientation="vertical"
    tools:context="com.example.anonymous.periodchecker.MainActivity">

    <LinearLayout
        android:id="@+id/text_language"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_new_user"
            android:textColor="@color/colorWhite"
            android:textSize="20dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/select_language"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_language"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/choose_language"
            android:textColor="@color/colorWhite"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/english"
                android:textColor="@color/colorWhite"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:background="@android:drawable/arrow_down_float" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lnChoosingLanguage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_language"
        android:background="@color/colorGray"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/rlTiengViet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/tieng_viet"
                android:textColor="@color/colorWhite"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/imgTiengVietSelection"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="150dp"
                android:background="@drawable/select_icon"
                android:visibility="gone" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlEnglish"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imgEnglishSelection"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="150dp"
                android:background="@drawable/select_icon"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/english"
                android:textColor="@color/colorWhite"
                android:textSize="20dp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_next_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/next_button"
            android:gravity="center"
            android:text="@string/next" />
    </LinearLayout>
</RelativeLayout>
