<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/src_resources_bg_blur"
    android:orientation="vertical"
    tools:context="com.example.anonymous.periodchecker.MainActivity">

    <LinearLayout
        android:id="@+id/text_language"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="20sp"
        android:gravity="center">

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/language"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/select_language"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingTop="10sp"
        android:layout_below="@+id/text_language">

        <TextView
            android:id="@+id/choose_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/choose_language"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/language_text_showed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/english"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="22sp"
                android:layout_height="12sp"
                android:background="@drawable/src_resources_settings_arrow_icon"
                android:layout_marginLeft="10sp" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/lnChoosingLanguage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_language"
        android:background="@color/colorGray"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/rlTiengViet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginRight="30sp"
            android:layout_marginTop="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/tieng_viet"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:id="@+id/imgTiengVietSelection"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="150sp"
                android:background="@drawable/select_icon"
                android:visibility="gone" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlEnglish"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginRight="30sp"
            android:layout_marginTop="10sp">

            <ImageView
                android:id="@+id/imgEnglishSelection"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="150sp"
                android:background="@drawable/select_icon"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/english"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size" />

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_next_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10sp">

        <Button
            android:id="@+id/next_button"
            android:layout_width="@dimen/button_next_width"
            android:layout_height="wrap_content"
            android:background="@drawable/next_button"
            android:gravity="center"
            android:text="@string/next"
            android:textSize="@dimen/button_next_size"
            android:textColor="@color/colorBlack"/>
    </LinearLayout>
</RelativeLayout>
