<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/src_resources_bg_blur"
                android:orientation="vertical"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp"
                tools:context="com.example.anonymous.periodchecker.MainActivity">

    <RelativeLayout
        android:id="@+id/text_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="20sp">

        <RelativeLayout
            android:id="@+id/rlBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/src_resources_calendar_arrow"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20sp"
                android:text="@string/back"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/menstrual_info"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/select_cycle_max"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/edit_text_background">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:hint="@string/menstrual_cycle_max"
            android:paddingBottom="20sp"
            android:paddingLeft="20sp"
            android:paddingTop="20sp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color_hint"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/select_cycle_min"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_cycle_max"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/edit_text_background">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:hint="@string/menstrual_cycle_min"
            android:paddingBottom="20sp"
            android:paddingLeft="20sp"
            android:paddingTop="20sp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color_hint"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/select_period_length"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/select_cycle_min"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/edit_text_background">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@null"
            android:hint="@string/period_length"
            android:paddingBottom="20sp"
            android:paddingLeft="20sp"
            android:paddingTop="20sp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color_hint"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/select_first_period_day"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/select_period_length"
        android:paddingBottom="10sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingTop="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/first_period_day"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size"/>

            <ImageView
                android:layout_width="19sp"
                android:layout_height="12sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="0.65"
                android:background="@drawable/src_resources_settings_arrow_icon"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/select_first_period_day_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/select_first_period_day"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:paddingBottom="10sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingTop="10sp"
        android:visibility="gone">

        <DatePicker
            android:id="@+id/datepicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="4"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:endYear="2016"
            android:scrollbarStyle="insideInset"
            android:startYear="1900"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ln_next_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10sp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/next_button"
            android:layout_width="@dimen/button_next_width"
            android:layout_height="wrap_content"
            android:background="@drawable/next_button"
            android:gravity="center"
            android:text="@string/next"
            android:textSize="@dimen/button_next_size"
            android:textColor="@color/text_color"/>
    </LinearLayout>
</RelativeLayout>
